Grid sizing has been fixed, Scrollbar added to inventory searching

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,6 +57,8 @@
 .upgrdcard{
   background-color: rgba(0, 0, 0, 0.7);
   max-width: 90vh;
+  width: 60vh;
+  height: 60vh;
   margin: auto;
   margin-top: 30px;
   display: flex;
@@ -66,6 +68,8 @@
 .upgrdcard2{
   background-color: rgba(0, 0, 0, 0.7);
   max-width: 90vh;
+  width: 60vh;
+  height: 60vh;
   margin: auto;
   margin-top: 30px;
   display: flex;
